--- a/pages/nordkreuz.org
+++ b/pages/nordkreuz.org
@@ -2,7 +2,7 @@
 
 **
 #+BEGIN_QUOTE
-Nordkreuz ist der größte Rechtsextremismus-Skandal Mecklenburg-Vorpommerns, seine Bedeutung reicht weit über die Landesgrenzen hinaus. Es geht um eine Gruppe von Menschen, die sich auf einen Tag X vorbereiten. Manche von ihnen bauten sich Bunker in den Garten, andere legten Munitionsverstecke an. Wieder andere bestellten Leichensäcke. Zwei Mitglieder der Gruppe, darunter ein Kriminalpolizist, sollen Feindeslisten mit Privatdaten politischer Gegner angelegt haben, um sie an jenem Tag X töten zu können. Die Bundesanwaltschaft in Karlsruhe ermittelt wegen rechtsextremen Terrorismus.
+Nordkreuz ist der größte Rechtsextremismus-Skandal Mecklenburg-Vorpommerns, seine Bedeutung reicht weit über die Landesgrenzen hinaus. Es geht um eine Gruppe von Menschen, die sich auf einen [[Tag X]] vorbereiten. Manche von ihnen bauten sich Bunker in den Garten, andere legten Munitionsverstecke an. Wieder andere bestellten Leichensäcke. Zwei Mitglieder der Gruppe, darunter ein Kriminalpolizist, sollen Feindeslisten mit Privatdaten politischer Gegner angelegt haben, um sie an jenem [[Tag X]] töten zu können. Die Bundesanwaltschaft in Karlsruhe ermittelt wegen rechtsextremen Terrorismus.
 #+END_QUOTE
 
 https://taz.de/Rechte-Prepper-in-Mecklenburg-Vorpommern/!5728354/
