Logseq auto save

--- a/pages/stefan_e..org
+++ b/pages/stefan_e..org
@@ -1,3 +1,7 @@
-#+TITLE: Stefan E.
+#+title: Stefan E.
 
-** 
+**
+- tags :: [[German Right Wing]]
+** - ist der Hauptverdächtige im Mord von Walter Lübcke
+- hat 150€ an die [[AFD]] gespendet
+- hat zusammen mit Markus H. (Mittäter) an [[AFD]]-Aufmärschen teilgenommen
