Logseq auto save

--- a/pages/björn_höcke.org
+++ b/pages/björn_höcke.org
@@ -3,7 +3,7 @@
 ** [[AFD]]-Sprecher und -Fraktionsvorsitzender in Thüringen
 ** Zitate
 
-- Die folgenden Zitate sind [[https://www.watson.de/deutschland/best%20of%20watson/809698121-fdp-laesst-sich-mit-hilfe-von-afd-waehlen-und-die-tickt-so-hoeckes-weltbild-in-13-zitaten][einem Artikel auf watson]] entnommen
+Die folgenden Zitate sind [[https://www.watson.de/deutschland/best%20of%20watson/809698121-fdp-laesst-sich-mit-hilfe-von-afd-waehlen-und-die-tickt-so-hoeckes-weltbild-in-13-zitaten][einem Artikel auf watson]] entnommen
 ***
 #+BEGIN_QUOTE
 Eine neue politische Führung ist den Interessen der autochthonen Bevölkerung verpflichtet und muss aller Voraussicht nach Maßnahmen ergreifen, die ihrem eigentlichen moralischen Empfinden zuwiderlaufen. (Nie Zweimal in denselben Fluss, 2018)
