Logseq auto save

--- a/pages/björn_höcke.org
+++ b/pages/björn_höcke.org
@@ -1,6 +1,6 @@
 #+title: Björn Höcke
 
-** [[AFD]]-Sprecher und -Fraktionsvorsitzender in Thüringen
+** [[AfD]]-Sprecher und -Fraktionsvorsitzender in Thüringen
 ** Zitate
 
 Die folgenden Zitate sind [[https://www.watson.de/deutschland/best%20of%20watson/809698121-fdp-laesst-sich-mit-hilfe-von-afd-waehlen-und-die-tickt-so-hoeckes-weltbild-in-13-zitaten][einem Artikel auf watson]] entnommen
