Logseq auto save

--- a/pages/stefan_e..org
+++ b/pages/stefan_e..org
@@ -2,4 +2,4 @@
 
 ** ist der Hauptverdächtige im Mord von Walter Lübcke
 ** hat 150€ an die [[AfD]] gespendet
-** hat zusammen mit Markus H. (Mittäter) an [[AFD]]-Aufmärschen teilgenommen
+** hat zusammen mit Markus H. (Mittäter) an [[AfD]]-Aufmärschen teilgenommen
