Logseq auto save

--- a/pages/home_improvement.org
+++ b/pages/home_improvement.org
@@ -1,6 +1,9 @@
 #+TITLE: Home Improvement
 
 ** Bad
+*** Größeres Waschbecken
+*** Bessere Befestigung für Duschvorhang
+*** Schöneren Duschvorhang
 ** Balkon
 *** [#A] Discokugel aufhängen
 *** Taubenmist entfernen
