Logseq auto save

--- a/pages/home_improvement.org
+++ b/pages/home_improvement.org
@@ -11,4 +11,7 @@
 *** Tresen
 ** Schlafzimmer
 *** Neue Bettwäsche
-**** 1xDecke 140cm × 200cm)
+**** 1 x Decke 140cm × 200cm
+1 x Decke 155cm × 220cm
+2 x Kissen 80cm × 80cm (neue Kissen?)
+1 × Matratze 140cm × 200cm
