Logseq auto save

--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -1,4 +1,7 @@
 #+TITLE: Nov 29th, 2020
 
 ** [[DIVI]]
-**
+** Corporations in OSM
+*** https://www.youtube.com/watch?v=BI0VrPyAtcQ
+*** Pokémon Go, Tesla, Grab (South East Asia), Mapbox, Facebook, Amazon, Apple… (13:08)
+*** Increasing activity, 2019 highest until now
