Logseq auto save

--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -5,3 +5,4 @@
 *** https://www.youtube.com/watch?v=BI0VrPyAtcQ
 *** Pokémon Go, Tesla, Grab (South East Asia), Mapbox, Facebook, Amazon, Apple… (13:08)
 *** Increasing activity, 2019 highest until now
+*** Niche interests of companies improve the entire database
