Logseq auto save

--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -6,3 +6,7 @@
 *** Pokémon Go, Tesla, Grab (South East Asia), Mapbox, Facebook, Amazon, Apple… (13:08)
 *** Increasing activity, 2019 highest until now
 *** Niche interests of companies improve the entire database
+** Proteste gegen [[Polizeigewalt]] in Frankreich
+*** https://www.tagesschau.de/ausland/frankreich-demo-polizeigewalt-101.html
+*** Anlass: Neues Gesetz, das Filmen von Polizisten verhindern soll, wenn ihre Sicherheit dabei gefährdet wird (auf Anlass von Macron)
+*** Letzte Woche: Video, in dem Polizisten einen Musikproduzenten minutenlang in seinem eigenen Studio verprügeln
