--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -10,3 +10,9 @@
 *** https://www.tagesschau.de/ausland/frankreich-demo-polizeigewalt-101.html
 *** Anlass: Neues Gesetz, das Filmen von Polizisten verhindern soll, wenn ihre Sicherheit dabei gefährdet wird (auf Anlass von Macron)
 *** Letzte Woche: Video, in dem Polizisten einen Musikproduzenten minutenlang in seinem eigenen Studio verprügeln
+** [[Uniter]]
+*** https://www.planet-interview.de/interviews/bernd-wagner/52059/
+**** Bernd Wagner, Leiter der Aussteigerorganisation EXIT spricht im Interview darüber, wie schwer es Aussteigern gemacht wird
+***** 80% der Aussteiger in militanten Kreisen
+***** 30% haben nach Ausstieg schwere körperliche Gewalt erfahren
+***** Unter anderem Problem: Verbindungen der Kameradschaften in die Sicherheitsbehörden, fehlendes Training, Unfähigkeit
