--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -16,3 +16,7 @@
 ***** 80% der Aussteiger in militanten Kreisen
 ***** 30% haben nach Ausstieg schwere körperliche Gewalt erfahren
 ***** Unter anderem Problem: Verbindungen der Kameradschaften in die Sicherheitsbehörden, fehlendes Training, Unfähigkeit
+*****
+#+BEGIN_QUOTE
+Die Rechtsrock-Musikindustrie ist mitfinanziert worden durch die Bundes- und Landesbehörden für Verfassungsschutz, dazu gibt es Hinweise von Aussteigern und Informationen aus Gerichtsverfahren.
+#+END_QUOTE
