--- a/pages/hannibal.org
+++ b/pages/hannibal.org
@@ -1,3 +1,4 @@
 #+TITLE: Hannibal
-
-** See also: [[Nordkreuz]], [[Uniter]] 
+#+PUBLIC: true
+#+TAGS: [[rechtsextremismus]]
+** See also: [[Nordkreuz]], [[Uniter]]
