--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -20,3 +20,7 @@
 #+BEGIN_QUOTE
 Die Rechtsrock-Musikindustrie ist mitfinanziert worden durch die Bundes- und Landesbehörden für Verfassungsschutz, dazu gibt es Hinweise von Aussteigern und Informationen aus Gerichtsverfahren.
 #+END_QUOTE
+** Rechtsextreme Chatgruppe bei Bundeswehr
+*** https://www.sueddeutsche.de/politik/bundeswehr-rechtsextremismus-chatgruppe-1.5130889
+*** 16 Chatmitglieder in Panzerbrigade 9 teilen gewaltverherrlichende, pornographische und antisemitische Inhalte
+*** MAD ermittelt bei insgesamt 700 Verdachtsfällen
