Logseq auto save

--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -4,8 +4,7 @@
 *** https://www.youtube.com/watch?v=BI0VrPyAtcQ
 ** Proteste gegen [[Polizeigewalt]] in Frankreich
 *** https://www.tagesschau.de/ausland/frankreich-demo-polizeigewalt-101.html
-*** Anlass: Neues Gesetz, das Filmen von Polizisten verhindern soll, wenn ihre Sicherheit dabei gefährdet wird (auf Anlass von Macron)
-*** Letzte Woche: Video, in dem Polizisten einen Musikproduzenten minutenlang in seinem eigenen Studio verprügeln
+*** Anlass: Neues Gesetz, das Filmen von Polizisten verhindern soll, wenn ihre Sicherheit dabei gefährdet wird (auf Anlaizisten einen Musikproduzenten minutenlang in seinem eigenen Studio verprügeln
 ** [[Uniter]]
 *** https://www.planet-interview.de/interviews/bernd-wagner/52059/
 **** Bernd Wagner, Leiter der Aussteigerorganisation EXIT spricht im Interview darüber, wie schwer es Aussteigern gemacht wird
