Logseq auto save

--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -13,3 +13,4 @@
 #+BEGIN_QUOTE
 Die Rechtsrock-Musikindustrie ist mitfinanziert worden durch die Bundes- und Landesbehörden für Verfassungsschutz, dazu gibt es Hinweise von Aussteigern und Informationen aus Gerichtsverfahren.
 #+END_QUOTE
+*** 26 Chatmitglieder in Panzerbrigade 9 teilen gewaltverherrlichende, pornographische und antisemitische Inhalte
