--- a/journals/2020_11_29.org
+++ b/journals/2020_11_29.org
@@ -15,3 +15,5 @@ Die Rechtsrock-Musikindustrie ist mitfinanziert worden durch die Bundes- und Lan
 #+END_QUOTE
 *** 26 Chatmitglieder in Panzerbrigade 9 teilen gewaltverherrlichende, pornographische und antisemitische Inhalte
 ** Rechtsextreme Chatgruppe bei Bundeswehr (28. November 2020)
+*** 26 Chatmitglieder in Panzerbrigade 9 teilen gewaltverherrlichende, pornographische und antisemitische Inhalte
+***
