Logseq auto save

--- a/pages/wehrsportgruppe_hofmann.org
+++ b/pages/wehrsportgruppe_hofmann.org
@@ -1,3 +1,4 @@
 #+TITLE: Wehrsportgruppe Hofmann
 
-** 
+** Verbindungen zum antisemitischen Doppelmord an Shlohmo Levin und dessen Frau (1980)
+** Verbindungen zum Oktoberfest-Attentat (1980)
