Logseq auto save

--- a/pages/wehrsportgruppe_hofmann.org
+++ b/pages/wehrsportgruppe_hofmann.org
@@ -1,4 +1,5 @@
 #+TITLE: Wehrsportgruppe Hofmann
 
+** tags :: [[rechtsextremismus]]
 ** Verbindungen zum antisemitischen Doppelmord an Shlohmo Levin und dessen Frau (1980)
 ** Verbindungen zum Oktoberfest-Attentat (1980)
