Logseq auto save

--- a/pages/hannibal.org
+++ b/pages/hannibal.org
@@ -1,4 +1,4 @@
 #+TITLE: Hannibal
 #+PUBLIC: true
-#+TAGS: [[rechtsextremismus]]
+** TAGS: [[rechtsextremismus]]
 ** See also: [[Nordkreuz]], [[Uniter]]
