Logseq auto save

--- a/journals/2020_12_01.org
+++ b/journals/2020_12_01.org
@@ -3,7 +3,7 @@
 ** Sturmbrigade 44 / Wolfsbrigade 44 verboten
 *** [[Dec 1st, 2020]]
 *** https://www.tagesschau.de/inland/sturmbrigade-44-aufloesung-101.html
-*** [[rechtsextremismus]]
+*** [[Rechtsextremismus]]
 *** 44 → "Division Dirlewanger" Gemeint ist Oskar Dirlewanger, ein Kriegsverbrecher der Waffen-SS, dessen Einheit überwiegend aus Straftätern zusammengestellt wurde.
 *** 13 Mitglieder in vier Bundesländern: [[Hessen]], [[Mecklenburg-Vorpommern]], [[Nordrhein-Westfalen]] und [[Sachsen-Anhalt]]; Verbot nach Hausdurchsuchungen in 3 Bundesländern (Verwaltungsgericht [[Sachsen-Anhalt]] sah keinen Anlass)
 **** Bereits letztes Jahr Durchsuchungen in allen 4 Bundesländern
