Logseq auto save

--- a/pages/wehrsportgruppe_hofmann.org
+++ b/pages/wehrsportgruppe_hofmann.org
@@ -1,6 +1,5 @@
 #+TITLE: Wehrsportgruppe Hofmann
 
-- tags :: [[rechtsextremismus]]
-
+- tags :: [[Rechtsextremismus]]
 ** Verbindungen zum antisemitischen Doppelmord an Shlohmo Levin und dessen Frau (1980)
 ** Verbindungen zum Oktoberfest-Attentat (1980)
