Logseq auto save

--- a/pages/franco_a..org
+++ b/pages/franco_a..org
@@ -1,3 +1,5 @@
 #+TITLE: Franco A.
 
+- tags :: [[Rechtsextremismus]]
+
 ** Bundeswehrsoldat, der sich als syrischer Flüchtling ausgegeben und einen Anschlag geplant hat
