--- a/pages/stefan_e..org
+++ b/pages/stefan_e..org
@@ -1,2 +1,5 @@
 #+title: Stefan E.
 
+** ist der Hauptverdächtige im Mord von Walter Lübcke
+** hat 150€ an die [[AfD]] gespendet
+** hat zusammen mit Markus H. (Mittäter) an [[AfD]]-Aufmärschen teilgenommen
