Logseq auto save

--- a/pages/björn_höcke.org
+++ b/pages/björn_höcke.org
@@ -2,6 +2,9 @@
 
 ** [[AfD]]-Sprecher und -Fraktionsvorsitzender in Thüringen
 ** Zitate
+:PROPERTIES:
+:id: 5fdcac20-99bf-4318-8788-5e7a9cba4c69
+:END:
 
 Die folgenden Zitate sind [[https://www.watson.de/deutschland/best%20of%20watson/809698121-fdp-laesst-sich-mit-hilfe-von-afd-waehlen-und-die-tickt-so-hoeckes-weltbild-in-13-zitaten][einem Artikel auf watson]] entnommen
 ***
